# opencv_projects

./: .gitignore  README.md
image_r_wr/: CMakeLists.txt  main.cpp
